fix: give proper spacing and eliminate unecessary <br/> tags

--- a/frontend/src/components/ForumPost/forum-post.module.scss
+++ b/frontend/src/components/ForumPost/forum-post.module.scss
@@ -9,31 +9,26 @@
         padding: 20px;
         box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.08);
     }
-
 }
+
 .author {
+
     &__text{
       font-size: 14px;
+      padding-left:20px;
     }
 
     &__time{
+        display: inline;
         float: right;
         text-align: right;
         font-size: 14px;
     }
-  
+
     &__title{
-        font-size: 18px; 
+        font-size: 18px;
         font-weight: $font-weight-medium;
         padding-left:20px;
-        float: left;
-    }
-
-    &__img-container {
-        margin: 20px;
-        max-width: 100%;
-        min-width: 80px;
-        float: left;
     }
 }
 
@@ -43,18 +38,20 @@
         float: left;
         margin: 0px 8.2px;
     }
-    
+
     &__media {
         float: right;
         text-align: right;
         margin-right: 15px;
     }
-
 }
-
 
 .horizontal{
     width: inherit;
-    margin:0;
+    margin: 0px;
     border: 1px solid rgba(0, 0, 0, 0.26);
+}
+
+.comment-section > * {
+    padding: 20px 0px;
 }
